--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Hi !
 
 <br><br>
 
-I am a graduate electrical engineering student.
+I am a student of electrical engineering.
 Here you will find a decent amount of information about me and my work.
 If you happen to share some of my interests, academic or otherwise, I'd be more than happy to talk about them.
 <br><br>
