--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<div title="Venkat Ritesh Ghanta Radio IIT Bombay Hyderabad Silver Oaks">
+<div title="Venkat Ritesh Ghanta">
 Hi !
 
 <br><br>
