--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div><img src="test.png" ></div>
         <a href="index.html" class="active"><span>Home</span></a>
 <a href="music.html"><span>      Music</span></a>
-<a href="pages.html"><span>Pages</span></a>
+<a href="projects.html"><span>Projects</span></a>
 <a href="random.html"><span>Random</span></a>
 
       </div>
