--- a/random.html
+++ b/random.html
@@ -28,55 +28,55 @@
     It's like music. An instant of music is not music at all.
   </li>
   <li class="y-c-3">
-    <span>3rd September 2020</span><br>
+    <!--span>3rd September 2020</span><br-->
     When you know for sure that everyone around you is thinking it,<br>
     in the deepest corner of their minds,<br>
     but no one's saying anything because they're aware of the pain it might bring about ..
   </li>
   <li class="y-c-2">
-    <span>17th August 2020</span><br>
+    <!--span>17th August 2020</span><br-->
     Sometimes if you cannot speak, it is not because there are no words but because there are too many of them.<br>
     The thoughts pass too quickly for me to speak about them.<br>
     Why am I writing about it ?<br>
     It's because I'm hoping that my act of writing them down will help regulate their flow.
   </li>
   <li class="y-c-1">
-    <span>27th July 2020</span><br>
+    <!--span>27th July 2020</span><br-->
     Nothing is better than when feelings resonate.<br>
     There's no greater pleasure than sharing a feeling and getting it back amplified.
   </li>
   <li class="y-c-0">
-    <span>20th July 2020</span><br>
+    <!--span>20th July 2020</span><br-->
     Sometimes you have to take a leap because that's the only way you know it's better on the other side.<br>
     But what if it isn't ? Then you go through anyway because once you get through, you're stronger than you were before.
   </li>
   <li class="y-c-1">
-    <span>1st July 2020</span><br>
+    <!--span>1st July 2020</span><br-->
     If you know there's a voice, even silence speaks volumes. 
   </li>
   <li class="y-c-2">
-    <span>30th June 2020</span><br>
+    <!--span>30th June 2020</span><br-->
     Her absence reminds me of the times when she's present.<br>
     Her presence shows me what I would be missing in her absence.
   </li>
   <li class="y-c-3">
-    <span>24th June 2020</span><br>
+    <!--span>24th June 2020</span><br-->
     I'm afraid of dying. But I'm more afraid of losing the ones I love.<br>
     So would you rather not love at all than live with the fear ?
   </li>
   <li class="y-c-2">
-    <span>23rd June 2020</span><br>
+    <!--span>23rd June 2020</span><br-->
     When you don't realise time passing, you're already having a great moment.
   </li>
   <li class="y-c-1">
-    <span>21st June 2020</span><br>
+    <!--span>21st June 2020</span><br-->
     What you think is real is that which you believe to be true from what you know.<br>
     Your perception of reality changes everytime you learn something new.<br>
     A picture of reality is formed in your mind after the truth is filtered by your senses and emotions.<br>
     I therefore realised it was important to keep my emotions in check because I did not want to end up with a skewed version of the reality and act out of place.
   </li>
   <li class="y-c-0">
-    <span>5th June 2020</span><br>
+    <!--span>5th June 2020</span><br-->
     Anonymity is empowering.<br>
     Would you be able to do more if you were wearing a mask ?<br>
     If yes, then why aren't you already ?<br>
@@ -85,11 +85,11 @@
     It's your behaviour which you project when you think you're being noticed is most often what causes you to be noticed in the first place. How can others be comfortable with you if you're not comfortable with yourself ?
   </li>
   <li class="y-c-1">
-    <span>15th May 2020</span><br>
+    <!--span>15th May 2020</span><br-->
     All it takes for the world to be a better place is for someone to take time and just think.
   </li>
   <li class="y-c-2">
-    <span>7th May 2020</span><br>
+    <!--span>7th May 2020</span><br-->
     Letting someone get close to you means you're also willing to take responsibility for their feelings.<br>
     It's not a decision to be taken lightly.<br>
     Your love and pain are within you and can be controlled even if it's difficult.<br>
@@ -97,14 +97,14 @@
     A way such that the feelings others develop for me are not their liability.
   </li>
   <li class="y-c-3">
-    <span>10th January 2020</span><br>
+    <!--span>10th January 2020</span><br-->
     My better self follows me always so he can point me in the right direction if I lose my way.<br> 
     So I can only be as good as my imagination lets me be.<br>
     I need to purify my mind if I need my projection of my ideal self to in fact be ideal.
   </li>
   <li class="y-c-2">
-    <span>17th November 2019</span>
-    <br>
+    <!--span>17th November 2019</span-->
+    <!--br-->
     Life began to fill the bubbles.<br>
     They rise,<br>
     leaving my insignificant self to go down.<br>
@@ -130,16 +130,16 @@
     just how deep it is.<br>
   </li>
   <li class="y-c-1">
-    <span>10th September 2019</span><br>
+    <!--span>10th September 2019</span><br-->
     The inability to think is not an excuse to judge people. Everyone has a story.
   </li>
   <li class="y-c-0">
-    <span>31st August 2019</span><br>
+    <!--span>31st August 2019</span><br-->
     I believe her to be true so I believe in her.
   </li>
   <li class="y-c-1">
-    <span>22nd May 2019</span>
-    <br>
+    <!--span>22nd May 2019</span-->
+    <!--br-->
     We are flawed. Like as a civilisation. Like as a life form.<br>
     "Why do we exist ?"<br>
     I can never answer this question.
@@ -151,17 +151,17 @@
     our flaw because we can never have all the answers.
   </li>
   <li class="y-c-2">
-    <span>30th November 2018</span><br>
+    <!--span>30th November 2018</span><br-->
     Observing something changes it.<br>
     Using something degrades it.<br>
     Having a feeling corrupts it.
   </li>
   <li class="y-c-3">
-    <span>27th November 2018</span><br>
+    <!--span>27th November 2018</span><br-->
     There's no progress if you're comfortable.
   </li>
   <li class="y-c-2">
-    <span>10th June 2018</span><br>
+    <!--span>10th June 2018</span><br-->
     Each of us is just a statistic.<br>
     Two people meeting is a statistic.<br>
     Two people falling in love is a statistic.<br>
@@ -169,31 +169,31 @@
     It would be arrogant of us to think anything otherwise.
   </li>
   <li class="y-c-1">
-    <span>7th June 2018</span><br>
+    <!--span>7th June 2018</span><br-->
     Rain intensifies feelings.<br>
     It doesn't make me feel a certain way.<br>
     It amplifies the feeling I already have.
   </li>
   <li class="y-c-0">
-    <span>7th June 2018</span><br>
+    <!--span>7th June 2018</span><br-->
     A fraction of your heart is my whole.
   </li>
   <li class="y-c-1">
-    <span> 5th June 2018</span><br>
+    <!--span> 5th June 2018</span><br-->
     I hope I see that day long before I realise how long it's been.
   </li>
   <li class="y-c-2">
-    <span>3rd April 2018</span><br>
+    <!--span>3rd April 2018</span><br-->
     I cannot feel every second of sleep that passes yet possess the knowledge that it has passed.<br>
     I'm waiting for tomorrow, so why do I still not want to fall asleep knowing that I won't realise the duration ?<br>
     Is sleep a gift ? Or do you feel better experiencing every passing second of your anticipation because such is the significance of the event tomorrow ?
   </li>
   <li class="y-c-3">
-    <span>1st April 2018</span><br>
+    <!--span>1st April 2018</span><br-->
     If only the words were coupled with the cadence of a voice ... 
   </li>
   <li class="y-c-2">
-    <span>7th March 2018</span><br>
+    <!--span>7th March 2018</span><br-->
     I want the memory to be of a feeling which arises only once in a lifetime. 
   </li>
 
