--- a/music.html
+++ b/music.html
@@ -35,8 +35,9 @@
         <li><span>1972</span><span> Emerson, Lake and Palmer </span><br>Trilogy</li>
         <li><span>1973</span><span> Emerson, Lake and Palmer </span><br>Brain Salad Surgery</li>
         <li><span>1970</span><span> Soft Machine </span><br>Third</li>
-        <li><span>1971</span><span> Egg </span><br>The Polite Force</li>
+        <li><span>1973</span><span> Return to Forever </span><br>Hymn Of The Seventh Galaxy</li>
         <li><span>1976</span><span> Return to Forever </span><br>Romantic Warrior</li>
+        <li><span>1971</span><span> Egg </span><br>The Polite Force</li>
         <li><span>1971</span><span> Pink Floyd </span><br>Meddle</li>
         <li><span>1977</span><span> Pink Floyd </span><br>Animals</li>
         <li><span>1969</span><span> King Crimson </span><br>In the Court of the Crimson King</li>
