--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="y-nav">
-        <div><img src="test.png" ></div>
+        <!--div><img src="test.png" ></div-->
         <a href="index.html" class="active"><span>Home</span></a>
 <a href="music.html"><span>      Music</span></a>
 <a href="projects.html"><span>Projects</span></a>
