--- a/common.html
+++ b/common.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="y-nav">
-        <div><img src="test.png" ></div>
+        <!--div><img src="test.png" ></div-->
         <!--NAV_LINKS-->
       </div>
 
