update music and projects order

--- a/music.html
+++ b/music.html
@@ -73,6 +73,8 @@
         <li><span>2014</span><span> The Pineapple Thief </span><br>Magnolia</li>
         <li><span>2016</span><span> The Pineapple Thief </span><br>Your Wilderness</li>
         <li><span>2018</span><span> The Pineapple Thief </span><br>Dissolution</li>
+        <li><span>2014</span><span> BADBADNOTGOOD </span><br>III</li>
+        <li><span>2016</span><span> BADBADNOTGOOD </span><br>IV</li>
         <li><span>2015</span><span> Riverside </span><br>Love, Fear and the Time Machine</li>
         <li><span>2016</span><span> Big Big Train </span><br>Folklore</li>
       </ul>
