--- a/music.html
+++ b/music.html
@@ -9,13 +9,14 @@
       <div class="y-nav">
         <!--div><img src="test.png" ></div-->
         <a href="index.html"><span>Home</span></a>
-<a href="music.html" class="active"><span>      Music</span></a>
 <a href="projects.html"><span>Projects</span></a>
+<a href="design.html"><span>Design</span></a>
+<a href="music.html" class="active"><span>Music</span></a>
 <a href="random.html"><span>Random</span></a>
 
       </div>
 
-            <!--Music-->
+      <!--Music-->
       <div style="width: 100%; float: left;">
       <ul class="y-musiclist">
         <li><span>1971</span><span> Genesis </span><br>Nursery Cryme</li>
