--- a/random.html
+++ b/random.html
@@ -9,8 +9,9 @@
       <div class="y-nav">
         <!--div><img src="test.png" ></div-->
         <a href="index.html"><span>Home</span></a>
-<a href="music.html"><span>      Music</span></a>
 <a href="projects.html"><span>Projects</span></a>
+<a href="design.html"><span>Design</span></a>
+<a href="music.html"><span>Music</span></a>
 <a href="random.html" class="active"><span>Random</span></a>
 
       </div>
