Decalogue of Darkness

--- a/music.html
+++ b/music.html
@@ -39,8 +39,6 @@
         <li><span>1973</span><span> Return to Forever </span><br>Hymn Of The Seventh Galaxy</li>
         <li><span>1976</span><span> Return to Forever </span><br>Romantic Warrior</li>
         <li><span>1971</span><span> Egg </span><br>The Polite Force</li>
-        <li><span>1971</span><span> Pink Floyd </span><br>Meddle</li>
-        <li><span>1977</span><span> Pink Floyd </span><br>Animals</li>
         <li><span>1969</span><span> King Crimson </span><br>In the Court of the Crimson King</li>
         <li><span>1970</span><span> King Crimson </span><br>In the Wake of Poseidon</li>
         <li><span>1971</span><span> King Crimson </span><br>Islands</li>
@@ -52,6 +50,9 @@
         <li><span>1977</span><span> Camel </span><br>Rain Dances</li>
         <li><span>1970</span><span> Caravan </span><br>If I Could Do It All Over Again, I'd Do It All Over You</li>
         <li><span>1971</span><span> Caravan </span><br>In the Land of Grey and Pink</li>
+        <li><span>1971</span><span> Pink Floyd </span><br>Meddle</li>
+        <li><span>1977</span><span> Pink Floyd </span><br>Animals</li>
+        <li><span>2018</span><span> DAAL </span><br>Decalogue of Darkness</li>
         <li><span>1972</span><span> Khan </span><br>Space Shanty</li>
         <li><span>1976</span><span> Rush </span><br>2112</li>
         <li><span>1977</span><span> Eloy </span><br>Ocean</li>
