--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
 <a href="projects.html" class="active"><span>Projects</span></a>
 <a href="design.html"><span>Design</span></a>
 <a href="music.html"><span>Music</span></a>
+<a href="transform.html"><span>Transform</span></a>
 
       </div>
 
